# oclive-launcher

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  start.bat  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: I18N_PROGRESS.md  launcher-developer-announcements.md
docs/announcements/: README.md  developer.md
scripts/: ensure-dist.mjs  start.bat  sync-ollama-installer.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled/ollama/: README.txt
src-tauri/src/: announcements.rs  main.rs  oclive_env.rs  release_download.rs  role_creator_message.rs  role_pack.rs
src/__tests__/: smoke.test.ts
src/announcements/: CreatorAnnouncementsSection.vue  DeveloperAnnouncementsSection.vue  helpCopy.ts  tauri.ts  useDeveloperAnnouncements.ts
src/components/: HelpHint.vue
src/composables/: useLauncherBootstrap.ts  useLauncherUiScale.ts  useRolePackEcho.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/lib/: launcherHints.ts  launcherHintsEn.ts  launcherPaste.ts  rolePackCreatorMessage.ts
