[package]
name = "oclive-launcher-tauri"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "oclive hub launcher — download, versions, logs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "protocol-asset"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
open = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level = "z"
lto = true
